# OpenGL-2D-Engine

./: .gitignore  CMakeLists.txt  Config.ini  Makefile  README.md
Config/: Breakout.ini
Config/Breakout/: Breakout.ini  levels.json
Executables/: README.md
Include/: Callbacks.hpp  Collisions.hpp  Framebuffer.hpp  Object.hpp  SceneManager.hpp  Setup.hpp  Shader.hpp  Shapes.hpp  TextRendering.hpp  Texture.hpp
Include/Scenes/: Breakout.hpp  CircleInsideSquareScene.hpp  CollisionsScene.hpp  StandardScene.hpp  StandardTextureScene.hpp
Shaders/: noColorTexture.frag  noColorTexture.vert  standard.frag  standard.vert  standardTexture.frag  standardTexture.vert
Shaders/Screen/: simpleScreen.vert
Src/: Callbacks.cpp  Collisions.cpp  Framebuffer.cpp  Main.cpp  Object.cpp  Setup.cpp  Shader.cpp  Shapes.cpp  TextRendering.cpp  Texture.cpp
Src/Scenes/: Breakout.cpp  CircleInsideSquareScene.cpp  CollisionsScene.cpp  StandardScene.cpp  StandardTextureScene.cpp
